# template-python-service

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
docs/: index.md
src/: main.py
