[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[project]
dependencies = [
    "fastapi[standard]",
    "pydantic",
    "prometheus-client",
]

[tool.uv]
lock = "uv.lock"
